# TR181

./: genieacs.env  text.txt
bbfdm/: Config_bbfdm.in  bbfdm.mk
bbfdm/files/etc/: firewall.portmap  firewall.service
bbfdm/files/etc/bbfdm/: bbfdm_services.sh  filters.json  input.json
bbfdm/files/etc/config/: bbfdm
bbfdm/files/etc/hotplug.d/iface/: 85-bbfdm-sysctl
bbfdm/files/etc/init.d/: bbfdmd
bbfdm/files/etc/uci-defaults/: 90-remove-nonexisting-microservices  91-fix-bbfdmd-enabled-option  95-portmap-firewall  96-sysctl-translation  97-firewall-service  99-link-core-plugins
bbfdm/files/lib/upgrade/keep.d/: bbf
bbfdm/libbbfdm-api/: CMakeLists.txt  dmcommon.c
bbfdm/libbbfdm/dmtree/tr181/: bridging.c  cellular.c  cellular.h  device.c  ethernet.c  ethernet.h  ip.c  wifi.c
icwmp/: CMakeLists.txt  Makefile
icwmp/bbf_plugin/: CMakeLists.txt  cmake_install.cmake  datamodel.c  datamodel.h
icwmp/files/etc/: firewall.cwmp
icwmp/files/etc/config/: cwmp
icwmp/files/etc/init.d/: icwmpd
icwmp/files/etc/uci-defaults/: 85-cwmp-set-userid  95-set-random-inform-time
icwmp/files/lib/upgrade/keep.d/: icwmp
icwmp/src/: CMakeLists.txt  autonomous_complpolicy.c  autonomous_complpolicy.h  backupSession.c  backupSession.h  common.c  common.h  config.c  config.h  cwmp.c  cwmp_cli.c  cwmp_cli.h  cwmp_du_state.c  cwmp_du_state.h  cwmp_event.c  cwmp_event.h  cwmp_http.c  cwmp_http.h  cwmp_zlib.c  cwmp_zlib.h  datamodel_interface.c  datamodel_interface.h  diagnostic.c  diagnostic.h  digauth.c  digauth.h  download.c  download.h  event.c  event.h  heartbeat.c  heartbeat.h  http.c  http.h  log.c  log.h  notifications.c  notifications.h  reboot.c  reboot.h  (+18 more)
pytest/: bridging.py  cellular.py  ethernet.py  ip.py  pytesting.py  selenium_testing.py  selenium_tests.py  wifi.py
pytest/testtest/: selenium_test.py
